<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/favorite_menu"
        android:title="@string/favorite"
        android:icon="@drawable/ic_heart_white"
        app:showAsAction="always"/>

    <item android:id="@+id/action_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting"
        android:iconTint="@color/white"
        android:iconTintMode="src_in"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

</menu>