<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".favorite.FavoriteActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUserFav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="0dp" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvUserFav"
        app:layout_constraintEnd_toEndOf="@+id/rvUserFav"
        app:layout_constraintStart_toStartOf="@+id/rvUserFav"
        app:layout_constraintTop_toTopOf="@+id/rvUserFav"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>